# cultivators

./: .gitignore  Cargo.toml  LICENSE  README.md  default.env  flake.nix
doc/dynreg/: canvas-openid-config.json  canvas-registration-response.json  dynreg.md  sample-openid-config.json  sample-registration.json
doc/lti13/: canvas-launch.md
entity/: Cargo.toml
entity/src/: lib.rs  nonce.rs  prelude.rs  registration.rs  tls_cert.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20241219_000001_create_registration_table.rs  m20241219_000002_create_nonce_table.rs  m20241219_000003_create_tls_cert_table.rs
nix/: default.nix  shell.nix
src/: app.rs  app_uris.rs  env.rs  lib.rs  main.rs  seaorm_setup.rs
src/app_routes/: dyn_reg.rs  launch.rs  login.rs  mod.rs  real_launch.rs  util.rs
src/cli/: args.rs  gen_commands.rs  jwt_commands.rs  mod.rs  reg_commands.rs  req_commands.rs  util.rs
src/crypto/: error.rs  files.rs  jwkgen.rs  keygen.rs  mod.rs
src/lti_app_models/: dyn_reg.rs  launch_integrity_validator.rs  mod.rs
src/lti_models/: conversions.rs  dynamic_registration.rs  login_request.rs  mod.rs  platform_openid_configuration.rs
templates/: dyn_reg_initiate.html  index.html  launch.html  login.html  real_launch.html
