[workspace]
members = [
  ".",
  "entity",
  "migration"
]

[package]
name = "cultivators"
homepage = "https://github.com/evanbattaglia/cultivators"
description = "LTI 1.3 easy-to-install test tool + CLI"
version = "0.0.3" # remember to sync with nix/default.nix
edition = "2021"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
askama = { version = "0.12.1", features = ["serde-json", "with-axum"] }
askama_axum = { version = "0.4.0", features = ["serde-json"] }
axum = "0.7.6"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
dotenvy = "0.15"
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
log = "0.4.22"
md5 = "0.7.0"
once_cell = "1.19.0"
percent-encoding = "2.3.1"
rand = "0.8.5"
rcgen = "0.13.1"
reqwest = { version = "0.12.9", features = ["__tls", "charset", "h2", "http2", "json", "macos-system-configuration", "rustls-tls"], default-features = false }
rsa = { version = "0.9.7", features = ["serde"] }
sea-orm = { version = "1.1.2", features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls", "debug-print"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_urlencoded = "0.7.1"
thiserror = "2.0.7"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
url = "2.5.4"
uuid = { version = "1.10.0", features = ["v4"] }
zeroize = "1.8.1"
rustls = { version = "0.23.20", features = ["log", "logging", "ring", "std", "tls12"], default-features = false }
